<resources>
    <string name="app_name">activity_1</string>
    <string name="Plan">Планировщик задач</string>
    <string name="email">email:</string>
    <string name="password">Пароль:</string>
    <string name="enter_password">введите пароль</string>
    <string name="mail_example_com">mail@example.com</string>
    <string name="enter_system">Вход в систему</string>
    <string name="api">Разработка API</string>
    <string name="rest_api">Разработать REST API для планировщика задач.</string>
    <string name="date">Срок выполнения:</string>
    <string name="Complete">Отметить как выполенную</string>
    <string name="button2">выполненние</string>
    <string name="button1">текущие</string>
    <string name="presentTask">текущие</string>
    <string name="doneTask">выполненные</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>