<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="252dp"
            android:layout_height="252dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/task_logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center_horizontal"
            android:text="@string/Plan"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="19dp"
            android:text="@string/email"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:ems="10"
            android:hint="@string/mail_example_com"
            android:inputType="text"
            android:background="@drawable/style_edittext"
            android:paddingStart="15dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="19dp"
            android:text="@string/password"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:background="@drawable/style_edittext"
            android:paddingStart="15dp"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="326dp"
        android:background="@drawable/style_round"
        android:layout_height="56dp"
        android:text="@string/enter_system"
        android:textColor="@color/white"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>